--- a/index.html
+++ b/index.html
@@ -56,18 +56,24 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
+      <div class="masthead__info">
+        <span class="masthead__info-date"><i class="masthead__info-icon far fa-calendar-check"></i> 25 October,
+          2019</span>
+        <span class="masthead__info-location"><i class="masthead__info-icon fas fa-map-marker-alt"></i> Desenzano del
+          Garda, Italy</span>
+      </div>
       <h1 class="mb-1">TS-Conf</h1>
       <h3 class="mb-5 text-white">
         <em>Indipendent Italian TypeScript Conference</em>
       </h3>
-      <a class="btn btn-secondary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
     <div class="overlay"></div>
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
-    <div class="container text-center">
+  <section class="content-section bg-primary" id="about">
+    <div class="container text-center text-white">
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>A new amazing conference by WEBdeBS! On 25 October 2019 unite with the whole Italian TypeScript Community!
@@ -78,50 +84,60 @@
   </section>
 
   <!-- Subscribe -->
-  <section class="content-section bg-primary text-white text-center" id="mailingList">
+  <section class="content-section bg-light text-center" id="mailingList">
     <div class="container">
       <div class="content-section-heading">
-        <h2 class="mb-5">Subscribe to our mailing list</h2>
+        <h2 class="mb-5 text-primary ">Subscribe to our mailing list</h2>
         <h3 class="text-secondary mb-0">We will reach out when the ticket are avayable and speakers annunced</h3>
       </div>
-     
+
       <!-- Begin Mailchimp Signup Form -->
       <div id="mc_embed_signup">
         <form action="https://webdebs.us2.list-manage.com/subscribe/post?u=67c1d13ec89909785151c7cbb&amp;id=170b325380"
           method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
           target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-            <div class="indicates-required">
-              <span class="asterisk">*</span> indicates required
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="mc-field-group form-group">
+                  <label for="mce-EMAIL" class="col-form-label">Email Address <span class="asterisk">(required)</span>
+                  </label>
+                  <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                </div>
+              </div>
             </div>
-            <div class="mc-field-group form-group row">
-              <label for="mce-EMAIL" class="col-sm-2 col-form-label">Email Address <span class="asterisk">*</span>
-              </label>
-              <input type="email" value="" name="EMAIL" class="required email form-control col-sm-2" id="mce-EMAIL">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="mc-field-group form-group">
+                  <label for="mce-FNAME" class="col-form-label">First Name </label>
+                  <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="mc-field-group form-group">
+                  <label for="mce-LNAME" class="col-form-label">Last Name </label>
+                  <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME">
+                </div>
+              </div>
             </div>
-            <div class="mc-field-group form-group row">
-              <label for="mce-FNAME" class="col-sm-2 col-form-label">First Name </label>
-              <input type="text" value="" name="FNAME" class="form-control col-sm-2" id="mce-FNAME">
-            </div>
-            <div class="mc-field-group form-group row">
-              <label for="mce-LNAME" class="col-sm-2 col-form-label">Last Name </label>
-              <input type="text" value="" name="LNAME" class="form-control col-sm-2" id="mce-LNAME">
-            </div>
-            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group form-group row">
+            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group form-group">
               <div class="content__gdpr">
                 <label>Marketing Permissions</label>
                 <p>Please select all the ways you would like to hear from WEBdeBS, Associazione di Promozione Sociale
                   senza scopo di lucro:</p>
-                <fieldset class="mc_fieldset gdprRequired mc-field-group " name="interestgroup_field">
-                  <label class="checkbox subfield col-sm-3 col-form-label" for="gdpr_8549">
-                    <input type="checkbox" id="gdpr_8549" name="gdpr[8549]" value="Y"
-                      class="av-checkbox "><span>Email</span> </label>
-                  <label class="checkbox subfield col-sm-3 col-form-label" for="gdpr_8553">
-                    <input type="checkbox" id="gdpr_8553" name="gdpr[8553]" value="Y" class="av-checkbox "><span>Direct
-                      Mail</span> </label>
-                  <label class="checkbox subfield col-sm-3 col-form-label" for="gdpr_8557">
-                    <input type="checkbox" id="gdpr_8557" name="gdpr[8557]" value="Y" class="av-checkbox "><span>Online
-                      Advertising</span> </label>
+                <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input av-checkbox" type="checkbox" id="gdpr_8549"  name="gdpr[8549]" value="Y" >
+                    <label class="form-check-label" for="gdpr_8549">Email</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input av-checkbox" type="checkbox" id="gdpr_8553"  name="gdpr[8553]" value="Y" >
+                    <label class="form-check-label" for="gdpr_8553">Direct Mail</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input av-checkbox" type="checkbox" id="gdpr_8557"  name="gdpr[8557]" value="Y" >
+                    <label class="form-check-label" for="gdpr_8557">Email</label>
+                  </div>
                 </fieldset>
                 <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information
                   about our privacy practices, please visit our website.</p>
@@ -139,7 +155,7 @@
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                 name="b_67c1d13ec89909785151c7cbb_170b325380" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" class="btn btn-secondary" value="Subscribe" name="subscribe"
+            <div class="clear"><input type="submit" class="btn btn-primary" value="Subscribe" name="subscribe"
                 id="mc-embedded-subscribe" class="button"></div>
           </div>
         </form>
@@ -152,13 +168,13 @@
 
 
   <!-- Portfolio -->
-  <section class="content-section" id="CFP">
+  <section class="content-section bg-primary" id="CFP">
     <div class="container">
       <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Call For Paper</h3>
-        <h2 class="mb-5">We are looking for awesome speakers</h2>
+        <h2 class="mb-5 text-white">We are looking for awesome speakers</h2>
         <p class="lead mb-5"></p>
-        <a class="btn btn-dark btn-xl js-scroll-trigger" href="https://www.papercall.io/tsconf-it">Submit your Talk!</a>
+        <a class="btn btn-secondary btn-xl js-scroll-trigger" href="https://www.papercall.io/tsconf-it">Submit your Talk!</a>
       </div>
       <div class="row no-gutters">
 
@@ -171,7 +187,7 @@
   <section id="location" class="content-section">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h2 lass="mb-5">Amazing Location</h2>
+        <h2 class="mb-5">Amazing Location</h2>
       </div>
       <div class="map">
         <iframe
