--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h3 class="text-secondary mb-0">Call For Paper</h3>
         <h2 class="mb-5 text-white">We are looking for awesome speakers</h2>
         <p class="lead mb-5"></p>
-        <a class="btn btn-secondary btn-xl js-scroll-trigger" href="https://www.papercall.io/tsconf-it">Submit your Talk!</a>
+        <a class="btn btn-secondary btn-xl js-scroll-trigger" href="https://www.papercall.io/tsconf-it" target="_blank">Submit your Talk!</a>
       </div>
       <div class="row no-gutters">
 
@@ -187,7 +187,7 @@
   <section id="location" class="content-section">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h2 class="mb-5">Amazing Location</h2>
+        <h2 class="mb-5 text-primary">Amazing Location</h2>
       </div>
       <div class="map">
         <iframe
@@ -202,18 +202,13 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://facebook.com/WEBdeBS">
+          <a class="social-link rounded-circle text-white mr-3" href="https://facebook.com/WEBdeBS" target="_blank">
             <i class="icon-social-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/webdebresa">
+          <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/webdebresa" target="_blank">
             <i class="icon-social-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#">
-            <i class="icon-social-github"></i>
           </a>
         </li>
       </ul>
