--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
       <div class="masthead__info">
-        <span class="masthead__info-date"><i class="masthead__info-icon far fa-calendar-check"></i> 25 October,
-          2019</span>
-        <span class="masthead__info-location"><i class="masthead__info-icon fas fa-map-marker-alt"></i> Desenzano del
-          Garda, Italy</span>
+        <span class="masthead__info-date">
+          <i class="masthead__info-icon far fa-calendar-check"></i> 
+          <span class="masthead__info-text">25 October, 2019</span>
+        </span>
+        <span class="masthead__info-location">
+          <i class="masthead__info-icon fas fa-map-marker-alt"></i> 
+          <span class="masthead__info-text">Desenzano del Garda, Italy</span>
+        </span>
       </div>
       <h1 class="mb-1">TS-Conf</h1>
       <h3 class="mb-5 text-white">
