Code of conduct

--- a/index.html
+++ b/index.html
@@ -220,6 +220,51 @@
     </div>
   </section>
 
+  <section id="code-of-conduct" class="content-section bg-primary">
+    <div class="content-section-heading text-center">
+      <h2 class="mb-5 text-secondary">Code of Conduct</h2>
+    </div>
+    <div class="container text-white">
+      <p>
+        TS-Conf IT is a community conference intended for networking and collaboration in the developer community. We value the participation of each member of the community and want all attendees to have an enjoyable and fulfilling experience. Accordingly, all attendees are expected to show respect and courtesy to other attendees throughout the conference and at all conference events, whether officially sponsored by TS-Conf IT or not.
+      </p>      
+      <p>  
+        To make clear what is expected, all delegates/attendees, speakers, exhibitors, organizers and volunteers at any TS-Conf IT event are required to conform to the following Code of Conduct. Organizers will enforce this code throughout the event.
+      </p>      
+      <p>
+        TS-Conf IT is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form.
+      </p>      
+      <p>
+        All communication should be appropriate for a professional audience including people of many different backgrounds. Sexual language and imagery is not appropriate for any conference venue, including talks.
+      </p>      
+      <p>
+        Be kind to others. Do not insult or put down other attendees. Behave professionally. Remember that harassment and sexist, racist, or exclusionary jokes are not appropriate for TS-Conf IT.
+      </p>      
+      <p>
+        Attendees violating these rules may be asked to leave the conference without a refund at the sole discretion of the conference organizers.
+      </p>      
+      <p>
+        Thank you for helping make this a welcoming, friendly event for all.
+      </p>      
+      <h3 class="text-center text-secondary mb-3 mt-5">Contact Information</h3>
+      <p>
+        If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff.
+      </p>      
+      <p>
+        Conference staff will be wearing “Staff” badges.
+      </p>      
+      <p>  
+        You may also contact hotel staff and ask to be put in touch with the conference chair.
+      </p>      
+      <p>  
+        If the matter is especially urgent, please contact us via our email address info@ts-conf.it.
+      </p>      
+      <p>  
+        Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
+      </p>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
