--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   </div>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input av-checkbox" type="checkbox" id="gdpr_8557"  name="gdpr[8557]" value="Y" >
-                    <label class="form-check-label" for="gdpr_8557">Email</label>
+                    <label class="form-check-label" for="gdpr_8557">Customized Online Advertising</label>
                   </div>
                 </fieldset>
                 <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information
