webdebs info in footer

--- a/index.html
+++ b/index.html
@@ -280,7 +280,13 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; WEBdeBS 2019</p>
+      <p class="text-muted small mb-0">
+        Copyright &copy; WEBdeBS 2019
+        <br>
+        WEBdeBS - Associazione di Promozione Sociale senza scopo di lucro,  
+        <a href="http://www.webdebs.org" target="_blank" rel="noopener noreferrer">www.webdebs.org</a>
+        - <a href="mailto:info@webdebs.org">info@webdebs.org</a>
+      </p>
     </div>
   </footer>
 
